# StarAttack

./: .gitignore  .gitmodules  CMakeLists.txt
resources/mesh/player/: Skeleton.glb
src/: main.c
src/core/: game.c  game.h  sa_game.c  sa_game.h
src/core/map/: sa_ceiling.h  sa_floor.h  sa_level.c  sa_level.h  sa_tile.h  sa_wall.c  sa_wall.h  sa_world.c  sa_world.h
src/core/render/: render.c  render.h  sa_render.c  sa_render.h
src/core/settings/: sa_settings.h
src/core/utils/: sa_structures.h
src/entity/attributes/: health.c  health.h  sa_health.c  sa_health.h
src/entity/player/: player.c  player.h  sa_player.c  sa_player.h
